name:                rfp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bhurt/rfp#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           BSD
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Flag Devel
    Description:       Development build (enable warnings and less optimization)
    Default:           False

library
  hs-source-dirs:      src
  exposed-modules:     RFP
                        , RFP.Internal.Behavior
                        , RFP.Internal.Hold
                        , RFP.Internal.Javascript
                        , RFP.Internal.PerformIO
                        , RFP.Internal.Runnable
                        , RFP.Internal.Static
                        , RFP.Internal.Threaded
                        , RFP.Internal.Trigger
  build-depends:       base >= 4.7 && < 5
                        , contravariant
                        , mtl
                        , stm
  default-language:    Haskell2010
  if flag(devel)
    ghc-options:       -O0
                        -W
                        -Weverything
                        -Wno-implicit-prelude
                        -Wno-missing-deriving-strategies
                        -Wno-prepositive-qualified-module
                        -Wno-unsafe
                        -Wno-missing-safe-haskell-mode
                        -Wno-missing-import-lists
                        -Werror 
  else
    ghc-options:       -O2


source-repository head
  type:     git
  location: https://github.com/bhurt/rfp
